bootstrap/kubernetes/apps/media/sonarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - port: 8989
      protocol: TCP
      targetPort: 8989
      name: webui
  selector:
    run: sonarr
  loadBalancerIP: 10.42.20.64
